--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<!doctype html>
+<!Doctype html>
 <html class="no-js">
 <head>
 	<meta charset="utf-8">
@@ -7,7 +6,7 @@
 	<meta name="description" content="童书">
 	<meta name="keywords" content="童书">
 	<meta name="viewport"
-	content="width=device-width, initial-scale=1">
+		  content="width=device-width, initial-scale=1">
 	<title>童书首页</title>
 	<!-- Set render engine for 360 browser -->
 	<meta name="renderer" content="webkit">
@@ -18,51 +17,440 @@
 	<link rel="stylesheet" href="./assets/style/app.css">
 </head>
 <body>
-			<!--[if lte IE 9]>
-			<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，Amaze UI 暂不支持。 请 <a
-			href="http://browsehappy.com/" target="_blank">升级浏览器</a>
-			以获得更好的体验！</p>
-		<![endif]-->
-
-		<div class="container">
-			<!-- HEADER-->
-			<div class="row header-top">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#"><img src="https://www.baidu.com/img/baidu_jgylogo3.gif" height="40"></a></li>
-						</ul>
+<!--[if lte IE 9]>
+<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，Amaze UI 暂不支持。 请 <a
+		href="http://browsehappy.com/" target="_blank">升级浏览器</a>
+	以获得更好的体验！</p>
+<![endif]-->
+<div class="container">
+	<div class="header-background">
+		<!-- HEADER-->
+		<div class="row header-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#"><img src="./assets/images/logo.png" height="40" alt="童书"></a></li>
+					</ul>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-5">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#">绘本</a></li>
+						<li><a href="#">绘本馆</a></li>
+						<li><a href="#">登录 | 注册</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">发现更多 <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">发现更多1</a></li>
+								<li><a href="#">发现更多2</a></li>
+								<li><a href="#">发现更多3</a></li>
+								<li><a href="#">发现更多4</a></li>
+							</ul>
+						</li>
+				</div>
+			</div>
+		</div>
+		<!-- HEADER-->
+		<!--  首页搜索  -->
+		<div class="row header-search">
+			<div class="jumbotron">
+				<div class="jumbotron-center">
+					<h2>阅读即世界。</h2>
+					<div class="input-group">
+						<span class="input-group-addon start">绘本 <i class="glyphicon glyphicon-triangle-bottom"></i></span>
+						<input type="text" class="form-control" placeholder="请输入书名/作者名字/ISBN码">
+						<span class="input-group-addon end"><i class="glyphicon glyphicon-search"></i></span>
 					</div>
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-5">
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#">绘本</a></li>
-							<li><a href="#">绘本馆</a></li>
-							<li><a href="#">登录|注册</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">发现更多 <span class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="#">发现更多1</a></li>
-									<li><a href="#">发现更多2</a></li>
-									<li><a href="#">发现更多3</a></li>
-									<li><a href="#">发现更多4</a></li>
-								</ul>
-							</li>
+				</div>
+			</div>
+		</div>
+		<!--  首页搜索  -->
+	</div>
+	<!-- 中心导航 -->
+	<div class="row nav-center">
+		<div class="nav-center-cl">
+			<div class="col-xs-6 col-md-4">
+				<i class="glyphicon glyphicon-user"></i>
+				<p>微课堂</p>
+			</div>
+			<div class="col-xs-6 col-md-4">
+				<i class="glyphicon glyphicon-book"></i>
+				<p>阅童心</p>
+			</div>
+			<div class="col-xs-6 col-md-4">
+				<i class="glyphicon glyphicon-gift"></i>
+				<p>爱悦读</p>
+			</div>
+		</div>
+	</div>
+	<!-- 中心导航 -->
+	<!-- 新书列表 -->
+	<div class="row book-list">
+		<div class="jumbotron">
+			<h2>新书推荐</h2>
+			<div class="underline"></div>
+			<div class="row book">
+				<div class="col-sm-4 col-md-3">
+					<div class="thumbnail">
+						<img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
+						<div class="caption">
+							<h5>《小猪佩奇：真超》</h5>
+							<h6>[美] Nosy Crow</h6>
 						</div>
 					</div>
-
 				</div>
-				<!-- HEADER-->
-
-			<!--[if lt IE 9]>
-			<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
-			<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-			<script src="assets/js/amazeui.ie8polyfill.min.js"></script>
-		<![endif]-->
-
-		<!--[if (gte IE 9)|!(IE)]><!-->
-		<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-		<!--<![endif]-->
-		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-	</body>
-	</html>
+				<div class="col-sm-4 col-md-3">
+					<div class="thumbnail">
+						<img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
+						<div class="caption">
+							<h5>《小猪佩奇：真超》</h5>
+							<h6>[美] Nosy Crow</h6>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 col-md-3">
+					<div class="thumbnail">
+						<img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
+						<div class="caption">
+							<h5>《小猪佩奇：真超》</h5>
+							<h6>[美] Nosy Crow</h6>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 col-md-3">
+					<div class="thumbnail">
+						<img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
+						<div class="caption">
+							<h5>《小猪佩奇：真超》</h5>
+							<h6>[美] Nosy Crow</h6>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 col-md-3">
+					<div class="thumbnail">
+						<img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
+						<div class="caption">
+							<h5>《小猪佩奇：真超》</h5>
+							<h6>[美] Nosy Crow</h6>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row book-list-bottom">
+				<ul class="pagination">
+					<li><a href="#" aria-label="Previous"><i class="glyphicon glyphicon-menu-left"></i></a></li>
+					<li class="active"><a href="#"><span class="label label-warning">查看更多</span></a></li>
+					<li><a href="#" aria-label="Next"><i class="glyphicon glyphicon-menu-right"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- 新书列表 -->
+	<!-- 热门童书推荐 -->
+	<div class="row hot-book">
+		<div class="jumbotron">
+			<h2>热门书单</h2>
+			<div class="underline"></div>
+			<div class="row book-commend">
+				<div class="col-md-6">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<span class="badge">共8本书</span>
+							<h3>如何认识你的邻居？</h3>
+						</li>
+						<li class="list-group-item">
+							孩子在成长过程中必然会对住在边上的邻居好奇，真实生活中的邻居接触比较简单，表面上.......
+						</li>
+						<li class="list-group-item">
+							<div class="row">
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<span class="badge">共8本书</span>
+							<h3>如何认识你的邻居？</h3>
+						</li>
+						<li class="list-group-item">
+							孩子在成长过程中必然会对住在边上的邻居好奇，真实生活中的邻居接触比较简单，表面上.......
+						</li>
+						<li class="list-group-item">
+							<div class="row">
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<span class="badge">共8本书</span>
+							<h3>如何认识你的邻居？</h3>
+						</li>
+						<li class="list-group-item">
+							孩子在成长过程中必然会对住在边上的邻居好奇，真实生活中的邻居接触比较简单，表面上.......
+						</li>
+						<li class="list-group-item">
+							<div class="row">
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<span class="badge">共8本书</span>
+							<h3>如何认识你的邻居？</h3>
+						</li>
+						<li class="list-group-item">
+							孩子在成长过程中必然会对住在边上的邻居好奇，真实生活中的邻居接触比较简单，表面上.......
+						</li>
+						<li class="list-group-item">
+							<div class="row">
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+								<div class="col-md-3">
+									<a href="#" class="thumbnail">
+										<img src="./assets/images/book_1.png" alt="...">
+									</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row book-list-bottom">
+				<ul class="pagination">
+					<li><a href="#" aria-label="Previous"><i class="glyphicon glyphicon-menu-left"></i></a></li>
+					<li class="active"><a href="#"><span class="label label-warning">查看更多</span></a></li>
+					<li><a href="#" aria-label="Next"><i class="glyphicon glyphicon-menu-right"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- 热门童书推荐 -->
+	<!-- 微课堂 -->
+	<div class="row micro-classroom">
+		<div class="jumbotron">
+			<div class="row">
+				<div class="col-md-6">
+					<img src="./assets/images/micro_classroom_1.png">
+				</div>
+				<div class="col-md-6">
+					<div class="micro-classroom-right">
+						<h3><i class="glyphicon glyphicon-camera"></i>&nbsp;微课堂</h3>
+						<p>油专业的儿童心理咨询师主讲，积极关注孩子成长的每个阶段，让你更懂得孩子，更了解孩子，帮助你成为更好的父母。父母应该是孩子最靠谱的心理咨询师，孩子教育，从父母抓起。</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="micro-classroom-right">
+						<h3><i class="glyphicon glyphicon-book"></i>&nbsp;爱悦读</h3>
+						<p>油专业的儿童心理咨询师主讲，积极关注孩子成长的每个阶段，让你更懂得孩子，更了解孩子，帮助你成为更好的父母。父母应该是孩子最靠谱的心理咨询师，孩子教育，从父母抓起。</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<img src="./assets/images/micro_classroom_1.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<img src="./assets/images/micro_classroom_1.png">
+				</div>
+				<div class="col-md-6">
+					<div class="micro-classroom-right">
+						<h3><i class="glyphicon glyphicon-plane"></i>&nbsp;阅童心</h3>
+						<p>油专业的儿童心理咨询师主讲，积极关注孩子成长的每个阶段，让你更懂得孩子，更了解孩子，帮助你成为更好的父母。父母应该是孩子最靠谱的心理咨询师，孩子教育，从父母抓起。</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="micro-classroom-right">
+						<h3><i class="glyphicon glyphicon-folder-open"></i>&nbsp;爱旅行</h3>
+						<p>油专业的儿童心理咨询师主讲，积极关注孩子成长的每个阶段，让你更懂得孩子，更了解孩子，帮助你成为更好的父母。父母应该是孩子最靠谱的心理咨询师，孩子教育，从父母抓起。</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<img src="./assets/images/micro_classroom_1.png">
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- 微课堂 -->
+	<!-- 阅读能力测评 -->
+	<div class="row read-ability">
+		<div class="jumbotron">
+			<h2>阅读能力测评</h2>
+			<div class="underline"></div>
+			<div class="row read-ability-center">
+				<div class="col-md-5">
+					<img src="./assets/images/micro_classroom_1.png" width="90%" >
+				</div>
+				<div class="col-md-5">
+					<h5>看看我的阅读水平去到哪里</h5>
+					<p>
+						每一位小学员都能享受到专业的中教老师和IT工作人员的全程陪伴和关注，为学员和家长及时解决各种问题，提供优质服务。家长可以通过课程回放录像查看孩子上课情况，
+					</p>
+					<p>外教反馈和学习报告在手机上就可查阅，即使不在孩子身边，也可以及时了解孩子学习。将教学融入到新奇有趣的分级冒险任务中，通过任务启发孩子不断运用所学知识，潜移默化的完成所学内容的消化吸收。</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- 阅读能力测评 -->
+	<!-- 漂流书  -->
+	<div class="row drifting-books">
+		<div class="jumbotron">
+			<h2>漂流书</h2>
+			<div class="underline"></div>
+			<div class="row drifting-books-center">
+				<img src="./assets/images/piao_liu_shu.png" width="50%">
+			</div>
+		</div>
+	</div>
+	<!-- 漂流书  -->
+	<div class="row footer">
+		<div class="row footer-center">
+			<div class="col-md-3"><img src="./assets/images/logo.png" width="100%"></div>
+			<div class="col-md-3">
+				<p>使用说明/帮助中心</p>
+				<p>免责声明</p>
+			</div>
+			<div class="col-md-3">
+				<p>网站地图</p>
+				<p>联系我们</p>
+			</div>
+			<div class="col-md-3">
+				<p>移动应用</p>
+				<p>更多功能</p>
+			</div>
+			<div class="col-md-3"><img src="./assets/images/qrcode.png" height="100%"></div>
+		</div>
+		<div class="icp">网站备案：粤ICP备16019609号</div>
+	</div>
+</div>
+<!--[if lt IE 9]>
+<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
+<script src="assets/js/amazeui.ie8polyfill.min.js"></script>
+<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<!--<![endif]-->
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
+</html>
