--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#">绘本</a></li>
 						<li><a href="#">绘本馆</a></li>
-						<li><a href="#">登录 | 注册</a></li>
+						<li><a href="#"><span onclick="login_act();">登录</span> | <span>注册</span></a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">发现更多 <span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -443,6 +443,47 @@
 		<div class="icp">网站备案：粤ICP备16019609号</div>
 	</div>
 </div>
+
+<!-- 登录模态框 -->
+<div id="home-login-modal" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="myModalLabel"><i class="glyphicon glyphicon-user"></i> 登录</h4>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="form-group">
+						<label for="exampleInputEmail1">手机号码</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">登录密码</label>
+						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					</div>
+					<div class="form-group">
+							<div class="checkbox">
+								<label>
+									<input type="checkbox"> 记住账号
+								</label>
+								<label class="label-right"><a href="">忘记密码?</a></label>
+							</div>
+					</div>
+					<div class="form-group">
+						<div class="login_in">
+							<button type="button" class="btn btn-warning btn-sm btn-block">　　登　　入　　</button>
+						</div>
+					</div>
+					<hr>
+				</form>
+				<p>您还可以使用</p>
+				<p><img src="./assets/images/wechat.png"></p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- 登录模态框 -->
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -452,5 +493,6 @@
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <!--<![endif]-->
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="./assets/js/core.min.js"></script>
 </body>
 </html>
