完成绘本详情静态页面

--- a/index - 副本.html
+++ b/index - 副本.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="童书">
 	<meta name="keywords" content="童书">
+	<meta name="viewport"
+		  content="width=device-width, initial-scale=1">
 	<title>童书首页</title>
 	<!-- Set render engine for 360 browser -->
 	<meta name="renderer" content="webkit">
