完成绘本馆详情静态页面

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<div class="row book">
 				<div class="col-sm-4 col-md-3">
 					<div class="thumbnail">
-						<img src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
+						<img onclick="window.location.href='./picture_book_detail.html';" src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=2ba3b15ebb12c8fcb4f3f1cbc438f578/d8f9d72a6059252d8d02de7a369b033b5bb5b9b3.jpg" alt="...">
 						<div class="caption">
 							<h5>《小猪佩奇：真超》</h5>
 							<h6>[美] Nosy Crow</h6>
@@ -516,8 +516,6 @@
 	</div>
 </div>
 <!-- 登录模态框 -->
-
-
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
