--- a/picture_book_museum_detail_user.html
+++ b/picture_book_museum_detail_user.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="绘本详情">
 	<meta name="keywords" content="绘本详情">
-	<title>绘本馆详情页</title>
+	<title>绘本馆详情页-用户</title>
 	<!-- Set render engine for 360 browser -->
 	<meta name="renderer" content="webkit">
 	<!-- No Baidu Siteapp-->
